--- a/index.html
+++ b/index.html
@@ -43,10 +43,31 @@
 		<div class="mx-auto max-w-screen-xl py-12 flex gap-3 flex-wrap">
 			<div class="card bg-base-100 shadow-xl">
 			 	<div class="card-body items-center text-center">
-			    	<h2 class="card-title">Stats Preview Card</h2>
-			    	<p class="py-3">Date Accomplished: </p>
-			    	<div class="card-actions">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Stats Preview Card</h2>
+			    	<p>Date Accomplished: 12 January 2025</p>
+			    	<div class="card-actions mt-2">
 			      		<a href="stats-preview-card-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Three Column Preview Card</h2>
+			    	<p>Date Accomplished: 14 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="3-column-preview-card-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Order Summary Component</h2>
+			    	<p>Date Accomplished: 15 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="order-summary-component-main/index.html" class="btn btn-primary">View</a>
 			    	</div>
 			  	</div>
 			</div>
