Upload 3 Completed Solutions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   			<a role="tab" class="tab">Intermediate</a>
   			<a role="tab" class="tab">Advanced</a>
 		</div>
-		<div class="mx-auto max-w-screen-xl py-12 flex gap-3 flex-wrap">
+		<div class="mx-auto max-w-screen-xl py-12 flex gap-8 flex-wrap justify-center">
 			<div class="card bg-base-100 shadow-xl">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
@@ -68,6 +68,36 @@
 			    	<p>Date Accomplished: 15 January 2025</p>
 			    	<div class="card-actions mt-2">
 			      		<a href="order-summary-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">QR Code Component</h2>
+			    	<p>Date Accomplished: 15 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="qr-code-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">NFT Preview Card</h2>
+			    	<p>Date Accomplished: 18 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="nft-preview-card-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Product Preview Card</h2>
+			    	<p>Date Accomplished: 19 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="product-preview-card-component-main/index.html" class="btn btn-primary">View</a>
 			    	</div>
 			  	</div>
 			</div>
