refactor: switch px to rem units for consistent scaling

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   			<a role="tab" class="tab">Intermediate</a>
   			<a role="tab" class="tab">Advanced</a>
 		</div>
-		<div class="mx-auto max-w-screen-xl py-12 flex gap-8 flex-wrap justify-center">
-			<div class="card bg-base-100 shadow-xl">
+		<div class="mx-auto max-w-screen-xl py-12 flex gap-6 flex-wrap justify-center">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Stats Preview Card</h2>
@@ -51,7 +51,7 @@
 			    	</div>
 			  	</div>
 			</div>
-			<div class="card bg-base-100 shadow-xl">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Three Column Preview Card</h2>
@@ -61,7 +61,7 @@
 			    	</div>
 			  	</div>
 			</div>
-			<div class="card bg-base-100 shadow-xl">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Order Summary Component</h2>
@@ -71,7 +71,7 @@
 			    	</div>
 			  	</div>
 			</div>
-			<div class="card bg-base-100 shadow-xl">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">QR Code Component</h2>
@@ -81,7 +81,7 @@
 			    	</div>
 			  	</div>
 			</div>
-			<div class="card bg-base-100 shadow-xl">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">NFT Preview Card</h2>
@@ -91,13 +91,43 @@
 			    	</div>
 			  	</div>
 			</div>
-			<div class="card bg-base-100 shadow-xl">
+			<div class="card bg-base-100 shadow-xl flex-2">
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Product Preview Card</h2>
 			    	<p>Date Accomplished: 19 January 2025</p>
 			    	<div class="card-actions mt-2">
 			      		<a href="product-preview-card-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Single Price Grid Component</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="single-price-grid-component-master/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Profile Card</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="profile-card-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Intro Component with Signup Form</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="intro-component-with-signup-form-master/index.html" class="btn btn-primary">View</a>
 			    	</div>
 			  	</div>
 			</div>
