update: upload 3 more solutions for frontend mentor challenges

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Single Price Grid Component</h2>
-			    	<p>Date Accomplished: - January 2025</p>
+			    	<p>Date Accomplished: 21 January 2025</p>
 			    	<div class="card-actions mt-2">
 			      		<a href="single-price-grid-component-master/index.html" class="btn btn-primary">View</a>
 			    	</div>
@@ -115,7 +115,7 @@
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Profile Card</h2>
-			    	<p>Date Accomplished: - January 2025</p>
+			    	<p>Date Accomplished: 22 January 2025</p>
 			    	<div class="card-actions mt-2">
 			      		<a href="profile-card-component-main/index.html" class="btn btn-primary">View</a>
 			    	</div>
@@ -125,7 +125,7 @@
 			 	<div class="card-body items-center text-center">
 			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
 			    	<h2 class="card-title my-2">Intro Component with Signup Form</h2>
-			    	<p>Date Accomplished: - January 2025</p>
+			    	<p>Date Accomplished: 23 January 2025</p>
 			    	<div class="card-actions mt-2">
 			      		<a href="intro-component-with-signup-form-master/index.html" class="btn btn-primary">View</a>
 			    	</div>
