upload 3 more solutions for the challenges

--- a/index.html
+++ b/index.html
@@ -131,6 +131,36 @@
 			    	</div>
 			  	</div>
 			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Four Card Feature Section</h2>
+			    	<p>Date Accomplished: 24 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="four-card-feature-section-master/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Base Apparel Section</h2>
+			    	<p>Date Accomplished: 25 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="base-apparel-coming-soon-master/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Interactive Rating Component</h2>
+			    	<p>Date Accomplished: 26 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="interactive-rating-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
 		</div>
 	</section>
 	<footer class="footer footer-center bg-base-200 text-base-content p-4">
