update: upload 4 more solution for frontend mentor challenge

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Perahim Tara | Code In Practice</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="app/assets/favicon-32x32.png">
 
 	<!-- Tailwind CSS + Daisy UI -->
 	<link href="https://cdn.jsdelivr.net/npm/	daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
 	<script src="https://cdn.tailwindcss.com"></script>
+
+	<style>
+		:root {
+			--text: hsl(333, 18%, 90%);
+			--background: hsl(340, 14%, 4%);
+			--primary: hsl(328, 11%, 74%);
+			--secondary: hsl(60, 11%, 31%);
+			--accent: hsl(90, 11%, 52%);
+		}
+	</style>
 </head>
 <body>
 	<main class="max-h-screen">
@@ -161,6 +171,76 @@
 			    	</div>
 			  	</div>
 			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Blog Preview Card</h2>
+			    	<p>Date Accomplished: 28 January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="blog-preview-card-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Recipe Page</h2>
+			    	<p>Date Accomplished: 2 February 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="recipe-page-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Result Summary Component</h2>
+			    	<p>Date Accomplished: 2 February 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="results-summary-component-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
+			    	<h2 class="card-title my-2">Social Links Profile</h2>
+			    	<p>Date Accomplished: 2 February 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="social-links-profile-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<!-- <div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Junior</div>
+			    	<h2 class="card-title my-2">Tip Calculator App</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="tip-calculator-app-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Junior</div>
+			    	<h2 class="card-title my-2">Notifications Page</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="notifications-page-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div>
+			<div class="card bg-base-100 shadow-xl flex-2">
+			 	<div class="card-body items-center text-center">
+			 		<div class="badge badge-primary badge-outline p-3">Junior</div>
+			    	<h2 class="card-title my-2">News Homepage</h2>
+			    	<p>Date Accomplished: - January 2025</p>
+			    	<div class="card-actions mt-2">
+			      		<a href="news-homepage-main/index.html" class="btn btn-primary">View</a>
+			    	</div>
+			  	</div>
+			</div> -->
 		</div>
 	</section>
 	<footer class="footer footer-center bg-base-200 text-base-content p-4">
