--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -46,7 +46,7 @@
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Perahim Tara</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/TaraDesk">Perahim Tara</a>.
       </p>
     </footer>
   </main>
