--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -59,7 +59,7 @@
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Perahim Tara</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/TaraDesk">Perahim Tara</a>.
       </p>
     </footer>
   </main>
