--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Perahim Tara</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/TaraDesk">Perahim Tara</a>.
     </div>
   </div>
   
