--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -95,7 +95,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Perahim Tara</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/TaraDesk">Perahim Tara</a>.
     </div>
   </main>
 
