--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -47,7 +47,7 @@
     </main>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Perahim Tara</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/TaraDesk">Perahim Tara</a>.
     </div>
 </body>
 </html>
