--- a/index.html
+++ b/index.html
@@ -1,212 +1,82 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Perahim Tara | Code In Practice</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="app/assets/favicon-32x32.png">
-
-	<!-- Tailwind CSS + Daisy UI -->
-	<link href="https://cdn.jsdelivr.net/npm/	daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
+	<!-- Tailwind CSS -->
 	<script src="https://cdn.tailwindcss.com"></script>
+	<script>
+        tailwind.config = { darkMode: 'class' };
+    </script>
+
+    <!-- Bootstrap Icons CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-	<main class="max-h-screen">
-		<div class="navbar bg-base-100 mx-auto max-w-screen-xl py-6">
-			<div class="navbar-start">
-		    	<a class="btn btn-ghost text-xl">TaraDesk</a>
-		  	</div>
-		  	<div class="navbar-end">
-		    	<a class="btn">Check my Profile</a>
-		  	</div>
-		</div>
+	<main class="w-screen h-screen p-3 md:p-6 overflow-hidden bg-gray-50 dark:bg-gray-950 text-gray-800 dark:text-gray-200">
+	    <div class="size-full overflow-y-auto py-6 px-10 rounded-2xl border-4 shadow-lg border-gray-200 dark:border-gray-600 bg-gray-50 dark:bg-gray-800">
 
-		<div class="hero bg-base-200 min-h-screen">
-		  	<div class="hero-content text-center">
-		    	<div class="max-w-lg">
-		      		<h1 class="text-4xl font-bold">Showcasing My Frontend Mastery</h1>
-					<p class="py-6">Explore thoughtfully crafted solutions to Frontend Mentor challenges, demonstrating creativity, precision, and a passion for clean, responsive design. Each project reflects a commitment to pushing boundaries and honing skills.</p>
-		    	</div>
-		  	</div>
-		</div>
+	        <nav class="flex justify-between items-center">
+	            <h1 class="text-2xl font-bold text-green-600 dark:text-green-400">TaraDesk</h1>
+	            <div class="flex items-center">
+	                <button id="theme-toggle" class="px-4 py-2 border-2 border-gray-200 dark:border-gray-600 bg-gray-100 dark:bg-gray-700 rounded-lg hover:bg-gray-200 dark:hover:bg-gray-600">
+	                    <i id="theme-icon" class="bi bi-sun text-md"></i>
+	                </button>
+	            </div>
+	        </nav>
+
+	        <section id="heroes" class="flex flex-col md:flex-row md:items-center md:justify-between gap-16 my-16 md:py-14">
+	            <!-- Description Section -->
+	            <section class="text-center md:text-start flex flex-col gap-4 items-center md:items-start md:w-[40%]" id="desc">
+	                <h2 class="text-3xl md:text-4xl font-semibold text-green-600 dark:text-green-400">
+	                    Frontend Mentor Challenge
+	                </h2>
+	                <p class="text-gray-700 dark:text-gray-300">
+	                    Explore thoughtfully crafted solutions to Frontend Mentor challenges. Each project reflects a commitment to pushing boundaries and honing skills.
+	                </p>
+	                <a href="#" class="w-[70%] md:w-1/2 px-6 py-2 bg-green-600 dark:bg-green-500 text-white rounded-lg text-md text-center hover:bg-green-700 dark:hover:bg-green-400">
+	                    Explore <i class="ms-2 bi bi-arrow-right"></i>
+	                </a>
+	            </section>
+
+	            <!-- Stats Section -->
+	            <section class="text-center md:w-[40%]" id="stats">
+	                <div class="mb-6">
+	                    <h2 class="text-6xl font-semibold text-green-600 dark:text-green-400" id="count"></h2>
+	                    <p class="text-gray-700 dark:text-gray-300">Solutions</p>
+	                </div>
+	                <div class="flex flex-col gap-3" id="switch">
+	                    <div class="flex gap-3">
+	                        <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">All</button>
+	                        <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">Newbie</button>
+	                    </div>
+	                    <div class="flex gap-3">
+	                       <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">Junior</button>
+	                        <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">Intermediate</button>
+	                    </div>
+	                    <div class="flex gap-3">
+	                        <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">Advanced</button>
+	                        <button class="w-1/2 py-3 border border-gray-200 dark:border-gray-600 rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-300 dark:focus:ring-gray-500">Guru</button>
+	                    </div>
+	                </div>
+	            </section>
+	        </section>
+
+	        <div class="mb-16 h-1 bg-gray-200 dark:bg-gray-700 rounded-lg"></div>
+
+	        <h3 class="text-center text-3xl font-bold text-green-600 dark:text-green-400">Solutions</h3>
+
+	        <section id="solutions" class="flex flex-col md:grid md:grid-cols-3 gap-4 my-10"></section>
+
+	        <div class="container text-center text-sm mt-10">
+	            <p>Copyright ©2025 - All right reserved by Perahim Tara (TaraDesk)</p>
+	        </div>
+	    </div>
 	</main>
 
-	<section class="bg-base-100">
-		<h2 class="text-center text-3xl py-12">Frontend Mentor Challenges</h2>
-		<div role="tablist" class="tabs tabs-bordered mx-auto max-w-screen-xl">
-  			<a role="tab" class="tab tab-active">Newbie</a>
-  			<a role="tab" class="tab">Junior</a>
-  			<a role="tab" class="tab">Intermediate</a>
-  			<a role="tab" class="tab">Advanced</a>
-		</div>
-		<div class="mx-auto max-w-screen-xl py-12 flex gap-6 flex-wrap justify-center">
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Stats Preview Card</h2>
-			    	<p>Date Accomplished: 12 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="stats-preview-card-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Three Column Preview Card</h2>
-			    	<p>Date Accomplished: 14 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="3-column-preview-card-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Order Summary Component</h2>
-			    	<p>Date Accomplished: 15 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="order-summary-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">QR Code Component</h2>
-			    	<p>Date Accomplished: 15 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="qr-code-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">NFT Preview Card</h2>
-			    	<p>Date Accomplished: 18 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="nft-preview-card-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Product Preview Card</h2>
-			    	<p>Date Accomplished: 19 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="product-preview-card-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Single Price Grid Component</h2>
-			    	<p>Date Accomplished: 21 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="single-price-grid-component-master/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Profile Card</h2>
-			    	<p>Date Accomplished: 22 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="profile-card-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Intro Component with Signup Form</h2>
-			    	<p>Date Accomplished: 23 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="intro-component-with-signup-form-master/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Four Card Feature Section</h2>
-			    	<p>Date Accomplished: 24 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="four-card-feature-section-master/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Base Apparel Section</h2>
-			    	<p>Date Accomplished: 25 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="base-apparel-coming-soon-master/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Interactive Rating Component</h2>
-			    	<p>Date Accomplished: 26 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="interactive-rating-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Blog Preview Card</h2>
-			    	<p>Date Accomplished: 28 January 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="blog-preview-card-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Recipe Page</h2>
-			    	<p>Date Accomplished: 2 February 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="recipe-page-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Result Summary Component</h2>
-			    	<p>Date Accomplished: 2 February 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="results-summary-component-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-			<div class="card bg-base-100 shadow-xl flex-2">
-			 	<div class="card-body items-center text-center">
-			 		<div class="badge badge-primary badge-outline p-3">Newbie</div>
-			    	<h2 class="card-title my-2">Social Links Profile</h2>
-			    	<p>Date Accomplished: 2 February 2025</p>
-			    	<div class="card-actions mt-2">
-			      		<a href="social-links-profile-main/index.html" class="btn btn-primary">View</a>
-			    	</div>
-			  	</div>
-			</div>
-		</div>
-	</section>
-	<footer class="footer footer-center bg-base-200 text-base-content p-4">
-  		<aside>
-    		<p>Copyright ©2025 - All right reserved by Perahim Tara (TaraDesk)</p>
-  		</aside>
-	</footer>
+
+	<script src="assets/script.js"></script>
 </body>
 </html>
